# namora

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: engine-service-prod-deploy.yml  memory-service-prod-deploy.yml  task-orchestrator-service-prod-deploy.yml  user-socket-service-prod-deploy.yml  web-console-prod-deploy.yml
apps/ai.worker.api.namora.ai/: .env  Cargo.toml
apps/ai.worker.api.namora.ai/src/: handler.rs  main.rs  types.rs
apps/app.namora.ai/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/chat-ai-worker/: .env  Cargo.toml
apps/chat-service/: .env  Cargo.toml
apps/chat-service/prompts/: action_order_filter_prompt.txt  system.txt
apps/chat-service/public/: index.html
apps/chat-service/src/: main.rs  schema.rs  state.rs
apps/chat-service/src/authz/: mod.rs
apps/chat-service/src/error/: mod.rs
apps/chat-service/src/modules/: mod.rs  router.rs  service.rs
apps/chat-service/src/modules/authn/: controller.rs  mod.rs  router.rs  service.rs
apps/chat-service/src/modules/authn/dto/: mod.rs
apps/chat-service/src/modules/chat/: controller.rs  mod.rs  router.rs  service.rs
apps/chat-service/src/modules/chat/dto/: mod.rs
apps/chat-service/src/modules/chat/prompts/: action_input_generation_prompt.txt  sales_system.txt
apps/chat-service/src/modules/health/: controller.rs
apps/chat-service/src/modules/team/: controller.rs  mod.rs  router.rs  service.rs
apps/chat-service/src/modules/team/dto/: mod.rs
apps/chat-service/src/modules/team/model/: mod.rs
apps/chat-service/src/modules/user/: controller.rs  router.rs  service.rs
apps/chat-service/src/modules/user/dto/: mod.rs
apps/chat-service/src/modules/user/model/: mod.rs
apps/chat-system-worker/: .env  Cargo.toml
apps/chat-system-worker/src/: db.rs  handler.rs  main.rs  types.rs
apps/chat-system-worker/src/actions/: crm.rs  linkedin.rs  mod.rs  router.rs
apps/chat-system-worker/src/jobs/: model.rs  service.rs
apps/chat-system-worker/src/types/: context.rs  message.rs  pinecone.rs
apps/chat-user-worker/: .env  Cargo.toml
apps/console/: package.json
apps/engine-service/: Cargo.toml  Dockerfile
apps/engine-service/public/: email-providers.json
apps/engine-service/public/prompts/: reply-generator.txt
apps/engine-service/src/: db.rs  main.rs  state.rs
apps/engine-service/src/authz/: mod.rs
apps/engine-service/src/modules/: mod.rs  router.rs  service.rs
apps/engine-service/src/modules/authn/: controller.rs  router.rs  service.rs
apps/engine-service/src/modules/crm/: controller.rs  router.rs  service.rs  types.rs
apps/engine-service/src/modules/nylas/: controller.rs  router.rs  service.rs  types.rs
apps/engine-service/src/modules/openapi/: controller.rs  mod.rs  router.rs
apps/engine-service/src/modules/tasks/: controller.rs  router.rs  service.rs  types.rs
apps/engine-service/src/modules/team/: mod.rs  service.rs
apps/engine-service/src/modules/user/: controller.rs  service.rs  types.rs
apps/engine.svc.api.namora.ai/: Cargo.toml  Dockerfile
apps/memory-service/: Cargo.toml  Dockerfile
apps/system-worker.api.namora.ai/: .env
apps/system.worker.api.namora.ai/: Cargo.toml
apps/task-orchestrator-service/: Cargo.toml  Dockerfile  ashutosh.json
apps/task-orchestrator-service/prompts/query/: generate_final_response.txt
apps/task-orchestrator-service/prompts/system/: create_deterministic_plan.txt  extract_action_input.txt
apps/task-orchestrator-service/public/prompts/: create_deterministic_plan.txt  create_non_deterministic_plan.txt  extract_action_input.txt  generate_user_response.txt  is_action_execution_plan_required.txt  is_more_context_required.txt  jsonllm.txt
apps/task-orchestrator-service/public/schemas/: create_deterministic_plan_response.txt  create_non_deterministic_plan_response.txt  generate_user_response.txt  is_action_execution_plan_required_response.txt  is_more_context_required_response.txt
apps/task-orchestrator-service/src/: db.rs  handler.rs  jsonllm.rs  main.rs  plan.rs
apps/task-orchestrator-service/src/actions/: router.rs
apps/task-orchestrator-service/src/actions/handlers/: crm.rs  linkedin.rs
apps/task-orchestrator-service/src/orchestrator/: execute.rs  mod.rs  query.rs  response.rs
apps/task-orchestrator-service/src/types/: linkedin.rs  mod.rs  query.rs
apps/task-orchestrator.svc.api.namora.ai/: Cargo.toml  Dockerfile
apps/task-orchestrator.svc.api.namora.ai/prompts/system/: create_deterministic_plan.txt  initial_query.txt
apps/task-orchestrator.svc.api.namora.ai/src/: db.rs  handler.rs  main.rs  plan.rs
apps/task-orchestrator.svc.api.namora.ai/src/actions/: router.rs
apps/task-orchestrator.svc.api.namora.ai/src/actions/handlers/: linkedin.rs
apps/task-orchestrator.svc.api.namora.ai/src/prompts/system/: create_deterministic_plan.txt  extract_action_input.txt  generate_response.txt  initial_query.txt
apps/user-socket-service/: .dockerignore  Cargo.toml  Dockerfile
apps/user-worker.api.namora.ai/: .env  (+1 more)
functions/upsert-indexes-qdrant/: Cargo.toml
functions/upsert-indexes-qdrant/src/: lib.rs
infra/: cluster.yml
libs/engine_db_repository/: Cargo.toml
libs/engine_db_repository/migrations/2023-05-03-153351_initial-tables/: down.sql  up.sql
libs/engine_db_repository/migrations/2023-05-17-062826_tasks/: down.sql  up.sql
libs/engine_db_repository/migrations/2023-05-20-035901_nylas/: down.sql  up.sql
libs/engine_db_repository/src/: schema.rs
libs/engine_db_repository/src/models/: mod.rs
libs/engine_db_repository/src/models/nylas_accounts/: generated.rs
libs/engine_db_repository/src/models/review_artifacts/: generated.rs
libs/engine_db_repository/src/models/review_jobs/: generated.rs
libs/engine_db_repository/src/models/task_activity_logs/: generated.rs
libs/engine_db_repository/src/models/tasks/: generated.rs
libs/engine_db_repository/src/models/teams/: generated.rs
libs/engine_db_repository/src/models/users/: generated.rs
resources/: actions-all.json  actions-old.json  actions.json
(+356 files in other folders)
