[package]
name = "chat-ai-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.22", features = ["serde"]}
amqprs = "1.2.1"
namora_core = { path = "../../libs/namora_core"}
async-openai = "0.8.0"