[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.3", features= ["multipart", "ws", "headers"] }
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
hyper = "0.14"
tower = { version = "0.4.12", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension","fs", "auth", "compression-full", "trace", "map-request-body", "util", "cors"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "8.1.1"
bcrypt = "0.14.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.22", features = ["serde"]}
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-sns = "0.24.0"
aws-credential-types = "0.54.1"
zip = "0.6.2"
walkdir = "2.3.2"
async-openai = "0.8.0"
axum-typed-websockets = { version = "0.4.0", features = ["json"]}
scraper = "0.15.0"