[package]
name = "engine-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.3", features= ["multipart", "ws", "headers"] }
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
hyper = "0.14"
tower = { version = "0.4.12", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension","fs", "auth", "compression-full", "trace", "map-request-body", "util", "cors"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.22", features = ["serde"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
namora_core = { path = "../../libs/namora_core"}
engine_db_repository = { path = "../../libs/engine_db_repository"}
jsonwebtoken = "8.1.1"
urlencoding = "2.1.2"
base64 = "0.21.0"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3 ", features = ["axum"] }