[package]
name = "task-orchestrator-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.22", features = ["serde"]}
async-openai = "0.8.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
namora_core = { path = "../../libs/namora_core"}
handlebars = "4.3.6"
lapin = "2.1.1"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
base64 = "0.21.0"
jsonschema = "0.17"
boon = "0.5.0"
qdrant-client = "1.1.2"
anyhow = "1.0.71"
tonic = "0.9.2"
