[package] 
name = "upsert-indexes-qdrant"
description = "Replace this with your function description"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.11"
axum = { version = "0.5.3", features= ["multipart"] }
dotenvy = "0.15"
async-openai = "0.8.0"
tokio-test = "0.4.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
namora_core = { path = "../../libs/namora_core"}