[package]
name = "engine_db_repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "serde_json", "chrono"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }